feat: add container and fonts configuration

--- a/src/slices/base-slice/base-slice.html
+++ b/src/slices/base-slice/base-slice.html
@@ -1,4 +1,3 @@
 <section class="container mx-auto">
-    <p>@@text;</p>
-    <img src="@@public('/images/test.jpg');">
+    <h1 class="bg-gray-200 fluid-fs heading1 font-normal px-4 py-16 text-center text-gray-500">@@text;</h1>    
 </section>
