feat: fix the before.js issue

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="flex flex-col justify-between">
     @@include("slices/base-slice/base-slice.html", {
-        text: "It is the base slice"
+        text: "HTML Zero, this page serve from `/src/pages/index.html`"
     }); 
 
     <script src="/js/script.js"></script>    
